syntax = 'proto3';

message User {
    string id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
    string role = 5;
    string phNo = 6;
    string dob = 7;
    string gender = 8;
    string code = 9;
    string caretakerId = 10;
    string patientId = 11;
    string doctorId = 12;
}

message IsAuthenticatedRequest {
    string token = 1;
}

message IsAuthenticatedResponse {
    User user = 1;
    bool ok = 2;
}

message LogoutUserRequest {
    string id = 1;
}

message LogoutUserResponse {
    string message = 1;
}

message PairPatientRequest {
    string code = 1;
    string doctorId = 2;
}

message PairPatientResponse {
    Patient patient = 1;
    string message = 2;
}

message Caretaker {
    string id = 1;
    string email = 2;
    string password = 3;
    string role = 4;
    string phNo = 5;
    string code = 6;
    string patientId = 7;
    string roomId = 8;
    string name = 9;
}

message CreateCaretakerRequest {
    string email = 1;
    string password = 2;
    string role = 3;
    string phNo = 4;
    string name = 5;
}

message CreateCaretakerResponse {
    Caretaker caretaker = 1;
    string message = 2;
    string refreshToken = 3;
    string accessToken = 4;
}

message ConnectedPatient {
    string patientId = 1;
    string code = 2;
    string roomId = 3;
}

message Doctor {
    string id = 1;
    string email = 2;
    string password = 3;
    string role = 4;
    string phNo = 5;
    repeated ConnectedPatient patients = 6;
    string name = 7;
}

message CreateDoctorRequest {
    string email = 1;
    string password = 2;
    string role = 3;
    string phNo = 4;
    string name = 5;
}

message CreateDoctorResponse {
    Doctor doctor = 1;
    string message = 2;
    string refreshToken = 3;
    string accessToken = 4;
}

message RoomIds {
    string caretakerRoomId = 1;
    string doctorRoomId = 2;
}

message Disease {
    string diseaseName = 1;
    string diseaseId = 2; 
}

message SpeedDial {
    string name = 1;
    string phNo = 2;
    string imageUrl = 3;
}

message Patient {
    string id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
    string role = 5;
    string phNo = 6;
    string dob = 7;
    string gender = 8;
    string code = 9;
    string caretakerId = 10;
    string doctorId = 12;
    RoomIds roomIds = 13;
    repeated Disease diseases = 14;
    repeated SpeedDial speedDials = 15;
}

message CreatePatientByCaretakerRequest {
    string name = 1;
    string email = 2;
    string dob = 3;
    string gender = 4;
    string caretakerId = 5;
    string role = 6;
    string phNo = 7;
}

message CreatePatientByCaretakerResponse {
   Patient patient = 1;
   string message = 2;
}

message CreateDoctorTokenRequest {
    string email = 1;
    string password = 2;
}

message CreateDoctorTokenResponse {
    Doctor doctor = 1;
    string message = 2;
    string refreshToken = 3;
    string accessToken = 4;
}

message CreateCaretakerTokenRequest {
    string email = 1;
    string password = 2;
}

message CreateCaretakerTokenResponse {
    Caretaker caretaker = 1;
    string message = 2;
    string refreshToken = 3;
    string accessToken = 4;
}

message GetCurrentCaretakerRequest {
    string id = 1;  
}

message GetCurrentCaretakerResponse {
    Caretaker caretaker = 1;
    string message = 2;
}

message GetCurrentDoctorRequest {
    string id = 1;  
}

message GetCurrentDoctorResponse {
    Doctor doctor = 1;
    string message = 2;
}


message CreatePatientWithoutCaretakerRequest {
    string name = 1;
    string email = 2;
    string password = 3;
    string phNo = 4;
    string dob = 5;
    string gender = 6;
    string role =  7;
}

message CreatePatientWithoutCaretakerResponse {
    Patient patient = 1;
    string message = 2;
    string refreshToken = 3;
    string accessToken = 4;
}

message CreatePatientTokenOnLoginRequest {
    string email = 1;
    string password = 2;
}

message CreatePatientTokenOnLoginResponse {
    Patient patient = 1;
    string message = 2;
    string refreshToken = 3;
    string accessToken = 4;
}

message CreateTokenOnCodeRequest {
    string code = 1;
}

message CreateTokenOnCodeResponse {
    Patient patient = 1;
    string message = 2;
    string refreshToken = 3;
    string accessToken = 4;
}

message GetCurrentPatientRequest {
    string id = 1;  
}

message GetCurrentPatientResponse {
    Patient patient = 1;
    string message = 2;
}

message SetDiseasesRequest {
    string patientId = 1;
    repeated Disease diseaseList = 2;
}

message SetDiseasesResponse {
    string message = 1;
    repeated Disease diseases = 2;
}

message GetPatientsRequest {
    string doctorId = 1;
}

message GetPatientsResponse {
    repeated Patient patients = 1;
    string message  = 2;
}

message SetSpeedDialsRequest {
    string name1 = 1;
    string name2 = 2;
    string phNo1 = 3;
    string phNo2 = 4;
    bytes imageBase64_1 = 5;
    bytes imageBase64_2 = 6;
    string patientId = 7;
}

message SetSpeedDialsResponse {
    bool success = 1;
    string message = 2;
}


service UserService {
    rpc IsAuthenticated(IsAuthenticatedRequest) returns (IsAuthenticatedResponse) {};
    rpc LogoutUser(LogoutUserRequest) returns (LogoutUserResponse) {};
    rpc PairPatient(PairPatientRequest) returns (PairPatientResponse) {};
    rpc CreateCaretaker(CreateCaretakerRequest) returns (CreateCaretakerResponse) {};
    rpc CreateDoctor(CreateDoctorRequest) returns (CreateDoctorResponse) {};
    rpc CreatePatientByCaretaker(CreatePatientByCaretakerRequest) returns (CreatePatientByCaretakerResponse) {};
    rpc CreateDoctorToken(CreateDoctorTokenRequest) returns (CreateDoctorTokenResponse) {};
    rpc CreateCaretakerToken(CreateCaretakerTokenRequest) returns (CreateCaretakerTokenResponse) {};
    rpc GetCurrentCaretaker(GetCurrentCaretakerRequest) returns (GetCurrentCaretakerResponse) {};
    rpc GetCurrentDoctor(GetCurrentDoctorRequest) returns (GetCurrentDoctorResponse) {};
    rpc CreatePatientWithoutCaretaker(CreatePatientWithoutCaretakerRequest) returns (CreatePatientWithoutCaretakerResponse) {};
    rpc CreatePatientTokenOnLogin(CreatePatientTokenOnLoginRequest) returns (CreatePatientTokenOnLoginResponse) {};
    rpc CreateTokenOnCode(CreateTokenOnCodeRequest) returns (CreateTokenOnCodeResponse) {};
    rpc GetCurrentPatient(GetCurrentPatientRequest) returns (GetCurrentPatientResponse) {};
    rpc SetDiseases(SetDiseasesRequest) returns (SetDiseasesResponse) {};
    rpc GetPatients(GetPatientsRequest) returns (GetPatientsResponse) {};
    rpc SetSpeedDials(SetSpeedDialsRequest) returns (SetSpeedDialsResponse) {};
}

